fix: contrasts for syntax highlighting

--- a/_sass/minima/_syntax-highlighting.scss
+++ b/_sass/minima/_syntax-highlighting.scss
@@ -31,37 +31,37 @@
   .kr    { font-weight: bold } // Keyword.Reserved
   .kt    { color: #458; font-weight: bold } // Keyword.Type
   .m     { color: #099 } // Literal.Number
-  .s     { color: #d14 } // Literal.String
-  .na    { color: #008080 } // Name.Attribute
+  .s     { color: #c9617b } // Literal.String
+  .na    { color: #23b4b4 } // Name.Attribute
   .nb    { color: #0086B3 } // Name.Builtin
   .nc    { color: #458; font-weight: bold } // Name.Class
-  .no    { color: #008080 } // Name.Constant
+  .no    { color: #23b4b4 } // Name.Constant
   .ni    { color: #800080 } // Name.Entity
   .ne    { color: #900; font-weight: bold } // Name.Exception
   .nf    { color: #900; font-weight: bold } // Name.Function
   .nn    { color: #555 } // Name.Namespace
-  .nt    { color: #000080 } // Name.Tag
-  .nv    { color: #008080 } // Name.Variable
+  .nt    { color: #9c9ce2 } // Name.Tag
+  .nv    { color: #23b4b4 } // Name.Variable
   .ow    { font-weight: bold } // Operator.Word
   .w     { color: #bbb } // Text.Whitespace
   .mf    { color: #099 } // Literal.Number.Float
   .mh    { color: #099 } // Literal.Number.Hex
   .mi    { color: #099 } // Literal.Number.Integer
   .mo    { color: #099 } // Literal.Number.Oct
-  .sb    { color: #d14 } // Literal.String.Backtick
-  .sc    { color: #d14 } // Literal.String.Char
-  .sd    { color: #d14 } // Literal.String.Doc
-  .s2    { color: #d14 } // Literal.String.Double
-  .se    { color: #d14 } // Literal.String.Escape
-  .sh    { color: #d14 } // Literal.String.Heredoc
-  .si    { color: #d14 } // Literal.String.Interpol
-  .sx    { color: #d14 } // Literal.String.Other
+  .sb    { color: #c9617b } // Literal.String.Backtick
+  .sc    { color: #c9617b } // Literal.String.Char
+  .sd    { color: #c9617b } // Literal.String.Doc
+  .s2    { color: #c9617b } // Literal.String.Double
+  .se    { color: #c9617b } // Literal.String.Escape
+  .sh    { color: #c9617b } // Literal.String.Heredoc
+  .si    { color: #c9617b } // Literal.String.Interpol
+  .sx    { color: #c9617b } // Literal.String.Other
   .sr    { color: #009926 } // Literal.String.Regex
-  .s1    { color: #d14 } // Literal.String.Single
+  .s1    { color: #c9617b } // Literal.String.Single
   .ss    { color: #990073 } // Literal.String.Symbol
   .bp    { color: #999 } // Name.Builtin.Pseudo
-  .vc    { color: #008080 } // Name.Variable.Class
-  .vg    { color: #008080 } // Name.Variable.Global
-  .vi    { color: #008080 } // Name.Variable.Instance
+  .vc    { color: #23b4b4 } // Name.Variable.Class
+  .vg    { color: #23b4b4 } // Name.Variable.Global
+  .vi    { color: #23b4b4 } // Name.Variable.Instance
   .il    { color: #099 } // Literal.Number.Integer.Long
 }
